# NoCraft

./: .gitignore  CMakeLists.txt  README.md
resources/: logo.png~  texture_atlas.png~
shaders/: chunk.frag.glsl  chunk.vert.glsl  final.frag.glsl  final.vert.glsl  reflect.frag.glsl  reflect.vert.glsl
sources/: main.cpp  minecraft.cpp  minecraft.hpp  player.cpp  player.hpp
sources/layers/: base_ui_layer.hpp  game_pause_layer.cpp  game_pause_layer.hpp  inventory_layer.cpp  inventory_layer.hpp
sources/render/: camera.cpp  camera.hpp  chunk_renderer.cpp  chunk_renderer.hpp  final_pass.cpp  final_pass.hpp  mesh.cpp  mesh.hpp  mesh_builder.cpp  mesh_builder.hpp  reflect_pass.cpp  reflect_pass.hpp  render_2d.cpp  render_2d.hpp  solid_pass.cpp  solid_pass.hpp  texture_atlas.cpp  texture_atlas.hpp  ui_renderer.cpp  ui_renderer.hpp  vertex.cpp  vertex.hpp  world_renderer.cpp  world_renderer.hpp
sources/scenes/: game_scene.cpp  game_scene.hpp  main_menu_scene.cpp  main_menu_scene.hpp  scene.cpp  scene.hpp
sources/ui/: ui.cpp  ui.hpp
sources/utils/: layers.hpp  math.hpp  noise.hpp  random_plot.hpp  ray.hpp  rect.hpp
sources/world/: block.cpp  block.hpp  chunk.hpp  world.cpp  world.hpp
sources/world/generators/: biome.cpp  biome.hpp  extreme_world_generator.cpp  extreme_world_generator.hpp  natural_world_generator.cpp  natural_world_generator.hpp  super_flat_world_generator.cpp  super_flat_world_generator.hpp  world_generator.hpp
